# k8vavoom

./: CMakeLists.txt  README
basev/: CMakeLists.txt  detectors.txt  games.txt  vwad_known_keys.txt
basev/chex/: CMakeLists.txt  basepak.ls.in  mapinfo.txt
basev/common/: CMakeLists.txt  basepak.ls.in  decaldef.txt  gldefs.txt  k8_decaldef_gore.txt  k8_decaldef_test.txt  k8vavoom_default.cfg  k8vavoom_startup.vs  language.en  line_specials.txt  sndinfo.txt  terrain.txt  vavoom_class_ignores.rc  vavoom_decorate_defs.xml  vavoom_known_blood.rc  vfxdefs.txt
basev/doom/: CMakeLists.txt  basepak.ls.in  gldefs.txt  sndinfo.txt  terrain.txt  vavoom_ldef_spec_trans.rc
basev/doom/credits/: credits.txt
basev/doom/graphics/: artibox.lmp  invgeml1.lmp  invgeml2.lmp  invgemr1.lmp  invgemr2.lmp  selectbo.lmp
basev/doom/k8vavoom/linedefs/: 00_doom.rc  10_boom.rc  20_mbf.rc  30_legacy.rc  40_zdoom.rc  60_edge.rc  80_k8vavoom.rc  boom.rc  eternity.rc  legacy.rc  mbf.rc  zdoom.rc
basev/doom1/: CMakeLists.txt  basepak.ls.in  credits.txt  in_epi4.txt
basev/doom1/graphics/e4interpic/: mapinfo
basev/doom2/: CMakeLists.txt  basepak.ls.in
basev/hacx/: CMakeLists.txt  basepak.ls.in
basev/heretic/: CMakeLists.txt  basepak.ls.in  sndinfo.txt  terrain.txt
basev/heretic/k8vavoom/linedefs/: heretic.rc
basev/hexen/: CMakeLists.txt  basepak.ls.in  sndinfo.txt  terrain.txt
basev/mods/: CMakeLists.txt
basev/mods/bdw/: CMakeLists.txt  basepak.ls.in
basev/mods/bdw/actors/: casing.txt  muzzle.txt  puffs.txt  rifle.txt  shotgun.txt  tracers.txt
basev/mods/bdw/models/: credits.txt  models.xml
basev/mods/bdw/models/tracer/: tracer.xml
basev/mods/bdw/models/voxels/BDW_EmptyBrass/: BDW_EmptyBrass.xml  c4s3d0.kvx  c4s3f0.kvx  c4s3h0.kvx  c4s3i0.kvx  c4s3j0.kvx  c4s3k0.kvx  c4s3l0.kvx  c4s3m0.kvx
basev/mods/bdw/models/voxels/BDW_EmptyClip/: BDW_EmptyClip.xml  eclia.kvx  eclib.kvx  eclic.kvx  eclid.kvx  eclie.kvx  eclif.kvx  eclig.kvx  eclih.kvx
basev/mods/bdw/models/voxels/BDW_Rifle/: BDW_Rifle.xml
basev/mods/bdw/models/voxels/BDW_Shotgun/: BDW_Shotgun.xml  shtca.kvx
basev/mods/bdw/models/voxels/BDW_ShotgunCasing/: BDW_ShotgunCasing.xml  c4s2a0.kvx  c4s2b0.kvx  c4s2c0.kvx  c4s2d0.kvx  c4s2e0.kvx  c4s2f0.kvx  c4s2g0.kvx  c4s2h0.kvx  c4s2i0.kvx  c4s2j0.kvx  c4s2k0.kvx  c4s2l0.kvx  c4s2m0.kvx
basev/mods/bdw/models/voxels/BDW_UnderwaterEmptyBrass/: BDW_UnderwaterEmptyBrass.xml  c4s3a0.kvx  c4s3b0.kvx  c4s3c0.kvx  c4s3e0.kvx  c4s3g0.kvx
basev/mods/lobfix/: CMakeLists.txt  basepak.ls.in  loadvcs.txt
basev/mods/lobfix/progs/lobfix/: classes.vc  infightctrl.vc
basev/mods/skeehud/: CMakeLists.txt  basepak.ls.in
basev/nerve/: CMakeLists.txt  basepak.ls.in
basev/plutonia/: CMakeLists.txt  basepak.ls.in
basev/strife/: CMakeLists.txt  basepak.ls.in  terrain.txt
basev/strife/k8vavoom/linedefs/: strife.rc
basev/tnt/: CMakeLists.txt  basepak.ls.in
branding/: shitdoze.rc
docs/: build_switch.txt  gplupgrade.txt  vavoomc.wiki
dox_vavoomc/: vavoomc.txt
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt  args.cpp  args.h  array.h  binheap.h  binheap_impl.h  colorutil.cpp  colorutil.h  common.cpp  common.h  core.h  cvarsys.cpp  cvarsys.h  endianness.cpp  endianness.h  exception.cpp  exception.h  log.cpp  log.h  map.h  map_impl.h  mathutil.cpp  mathutil.h  mathutil_float.h  micropather.cpp  minipng.cpp  minipng.h  mythreadlite.h  name.cpp  name.h  names.h  prngs.cpp  prngs.h  propp.h  rawtty.cpp  rawtty.h  ryu.h  ryu_d2s.c  ryu_f2s.c  smsort.c  (+17 more)
libs/imago/: imago.cpp  imago.h
libs/timidity/: common.cpp  instrum.cpp  instrum_dls.cpp  instrum_sf2.cpp  timidity.cpp
libs/vavoomc/: technotes.txt  vc_api_common.cpp  vc_class.cpp  vc_class.h  vc_constant.cpp  vc_constant.h  vc_emit_context.cpp  vc_emit_context.h  vc_error.cpp  vc_error.h  vc_executor.cpp  vc_executor_builtins.cpp  vc_executor_builtins_dict.cpp  vc_executor_builtins_dynarr.cpp  vc_expr_array.cpp  vc_expr_array.h  vc_expr_assign.cpp  vc_expr_assign.h  vc_expr_base.cpp  vc_expr_base.h  vc_expr_cast.cpp  vc_expr_cast.h  vc_expr_field.cpp  vc_expr_field.h  vc_expr_invoke.cpp  vc_expr_invoke.h  vc_expr_literal.cpp  vc_expr_literal.h  vc_expr_local.cpp  vc_expr_local.h  vc_expr_misc.cpp  vc_expr_misc.h  vc_expr_type.cpp  vc_expr_type.h  vc_expr_unary_binary.cpp  vc_expr_unary_binary.h  vc_field.cpp  vc_field.h  vc_lexer.cpp  vc_lexer.h  (+43 more)
libs/xmplite/: CMakeLists.txt
libs/xmplite/src/: load.c
miscmods/hit2proj/: README.txt  decorate.txt  gldefs.txt  modeldef.txt  vlumpy.ls  zbuild.sh
progs/doom2/: cgame.vc
source/: CMakeLists.txt  automap.cpp  automap.h  build.h  chat.cpp  chat.h  cheats.cpp  cmd.cpp  cmd.h  common.h  console.cpp  console.h  cvar.cpp  cvar.h  dedlog.cpp  drawer.cpp  drawer.h  finale.cpp  finale.h  gamecommon.h  gamedefs.h  gamedefs_build.h  gamedefs_fwd.h  host.cpp  host.h  iline.cpp  iline.h  in_input.cpp  in_sdl.cpp  infostr.cpp  infostr.h  input.h  language.cpp  language.h  lockdefs.cpp  lockdefs.h  mapinfo.cpp  mapinfo.h  menu.cpp  menu.h  (+19 more)
source/acs/: p_acs.cpp  p_acs.h  p_acs_extfn.cpp  p_acs_extfunc.h
source/client/: cl_local.h  cl_main.cpp  client.h
source/decorate/: vc_bloodinfo.cpp  vc_classignore.cpp  vc_decorate.cpp  vc_decorate.h  vc_decorate_ast.cpp  vc_decorate_expr.cpp
source/dehacked/: vc_dehacked.cpp  vc_dehacked.h
source/filesys/: files.cpp  files.h  fsmoddetect.cpp
source/level/: beamclip.cpp  beamclip.h  level.cpp  level.h  level_3dcoldet.cpp  level_3dfloors.cpp  level_3dpobj_coldet.cpp  level_calclineseg.cpp  level_dbgexport.cpp  level_decals.cpp  level_decals_bootcheck.cpp  level_decals_spread.cpp  level_decals_spread_flat.cpp  (+10 more)
specs/: boomref.html  boomref.txt  index.wiki  k8vavoom_decals.txt  k8vavoom_decorate.txt  k8vavoom_pointlights.txt  k8vavoom_terrain_bootprints.txt  pointlights_k8vavoom.txt  udmf_k8vavoom.txt  umapinfo.txt
utils/: getfossver.sh
vccrun/: CMakeLists.txt  convars.cpp  convars.h  vc_api_vccrun.cpp  vc_api_vccrun.h  vcc_netobj.cpp  vcc_netobj.h  vcc_run.cpp  vcc_run.h  vcc_run_net.cpp  vcc_run_serializer.cpp  vcc_run_vc.h  vcc_run_vobj.cpp
(+1208 files in other folders)
